Revert "Hapus chart.js"
This reverts commit 59f848ae0eff6726d7f76407ddb2e0d0cd98752a.

--- a/viz/html/visualisasi.html
+++ b/viz/html/visualisasi.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="grafik.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <title>Visualisasi</title>
 </head>
 <body>
-    <div>
+    <div class="grafik">
         <canvas id="bar_wil_stok"></canvas>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="../js/grafik.js"></script>
+
+    <div>
+        <canvas id="canvas"></canvas>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js" integrity="sha512-CQBWl4fJHWbryGE+Pc7UAxWMUMNMWzWxF4SQo9CgkJIN1kx6djDQZjh3Y8SZ1d+6I+1zze6Z7kHXO7q3UyZAWw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-geo@4.3.0/build/index.umd.min.js"></script>
+    <script src="../js/grafik.js"></script>
+    <script src="../js/peta.js"></script>
+
 </body>
 </html>
