--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpha One</title>
-    <link rel="stylesheet" href="../style/output.css" />
+    <link rel="stylesheet" href="src/style/output.css" />
 
     <!-- ? GOOGLE ICON -->
     <link
@@ -21,7 +21,7 @@
     >
       <div class="duration-300 ease-in-out z-50 navigation-lg navigation-md">
         <a class="navigation-link" href="#hero">HOME</a>
-        <a class="navigation-link" href="#about-us">ABOUT US</a>
+        <a class="navigation-link" href="#principle">PRINCIPLE</a>
         <a class="navigation-link" href="#visualization">VISUALIZATION</a>
         <a class="navigation-link" href="#team">TEAM</a>
       </div>
@@ -36,7 +36,7 @@
       <div
         class="flex gap-1 items-center font-BazarMedium text-black text-3xl font-bold px-2"
       >
-        <img class="h-11" src="../assets/picts/logo.png" alt="" />
+        <img class="h-11" src="src/assets/picts/logo.png" alt="" />
         LPHA1
       </div>
     </nav>
@@ -50,7 +50,7 @@
       <hr class="top-dashed" />
       <div class="max-w-[940px] mx-auto">
         <figure class="p-3 rounded-[4px] bg-slate-200">
-          <img class="mb-4" src="../assets/picts/a1_team.jpg" alt="" />
+          <img class="mb-4" src="src/assets/picts/a1_team.jpg" alt="" />
           <figcaption class="text-4xl font-BazarMedium text-center">
             ALPHA ONE
           </figcaption>
@@ -65,10 +65,10 @@
     <!-- ! HERO -->
 
     <!-- ! ABOUT US -->
-    <section id="about-us" class="flex flex-col bg-[#e6e1d0] py-9 relative">
+    <section id="principle" class="flex flex-col bg-[#e6e1d0] py-9 relative">
       <hr class="top-dashed" />
       <!-- ? HEADER -->
-      <h2 class="header mb-14">ABOUT US</h2>
+      <h2 class="header mb-14">PRINCIPLE</h2>
       <div
         class="py-4 px-12 grid justify-center items-start gap-3 sm:grid-cols-1 md:grid-cols-2 gap-x-0 xl:grid-cols-4"
       >
@@ -172,39 +172,58 @@
 
       <div class="header max-md:scale-75">VISUALISASI DATA</div>
       <div
-        class="grid grid-rows-2 grid-cols-2 gap-3 max-w-[960px] mx-auto px-3"
+        id="filter-buttons"
+        class="flex justify-center items-center flex-wrap mb-3 xl:gap-5"
       >
-        <div class="w-full max-w-[940px] bg-slate-200 p-3">
-          <figure class="w-full">
-            <img class="w-full" src="../assets/picts/a1_team.jpg" alt="" />
-            <figcaption class="text-4xl text-center max-md:text-2xl">
-              Visualisasi 1
-            </figcaption>
-          </figure>
+        <button data-set="all" class="active">Show All</button>
+        <button data-set="peta-harga">Peta Harga</button>
+        <button data-set="penjualan">Penjualan</button>
+        <button data-set="stok">Stok</button>
+        <button data-set="rating">Rating</button>
+      </div>
+      <div
+        id="filterables"
+        class="relative w-full h-full grid gap-3 items-center justify-center overflow-hidden md:grid-cols-1 lg:grid-cols-2"
+      >
+        <div
+          data-set="peta-harga"
+          class="relative overflow-hidden w-full pt-[56.25%] mx-auto"
+        >
+          <iframe
+            title="pemetaan-harga"
+            src="https://app.powerbi.com/reportEmbed?reportId=494056fc-d985-4e92-bc1f-6268f8c9a71c&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
+            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+          ></iframe>
         </div>
-        <div class="w-full max-w-[940px] bg-slate-200 p-3">
-          <figure class="w-full">
-            <img class="w-full" src="../assets/picts/a1_team.jpg" alt="" />
-            <figcaption class="text-4xl text-center max-md:text-2xl">
-              Visualisasi 1
-            </figcaption>
-          </figure>
+        <div
+          data-set="penjualan"
+          class="relative overflow-hidden w-full pt-[56.25%]"
+        >
+          <iframe
+            title="penjualan"
+            src="https://app.powerbi.com/reportEmbed?reportId=9935679c-f752-418e-8e97-8c17bbfc351d&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
+            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+          ></iframe>
         </div>
-        <div class="w-full max-w-[940px] bg-slate-200 p-3">
-          <figure class="w-full">
-            <img class="w-full" src="../assets/picts/a1_team.jpg" alt="" />
-            <figcaption class="text-4xl text-center max-md:text-2xl">
-              Visualisasi 1
-            </figcaption>
-          </figure>
+        <div
+          data-set="stok"
+          class="relative overflow-hidden w-full pt-[56.25%]"
+        >
+          <iframe
+            title="stok"
+            src="https://app.powerbi.com/reportEmbed?reportId=23a96032-4178-427c-9abf-28f80559ccd2&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
+            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+          ></iframe>
         </div>
-        <div class="w-full max-w-[940px] bg-slate-200 p-3">
-          <figure class="w-full">
-            <img class="w-full" src="../assets/picts/a1_team.jpg" alt="" />
-            <figcaption class="text-4xl text-center max-md:text-2xl">
-              Visualisasi 1
-            </figcaption>
-          </figure>
+        <div
+          data-set="rating"
+          class="relative overflow-hidden w-full pt-[56.25%]"
+        >
+          <iframe
+            title="rating"
+            src="https://app.powerbi.com/reportEmbed?reportId=c368a569-e098-4a0c-b0eb-d5cf167dc02c&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
+            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+          ></iframe>
         </div>
       </div>
       <hr class="bottom-dashed" />
@@ -225,7 +244,7 @@
             <div class="card-face">
               <img
                 class="card-front"
-                src="../assets/picts/team-pict/reqi-fp.png"
+                src="src/assets/picts/team-pict/reqi-fp.png"
                 alt=""
               />
             </div>
@@ -247,7 +266,7 @@
             <div class="card-face">
               <img
                 class="card-front"
-                src="../assets/picts/team-pict/rafif-fp.png"
+                src="src/assets/picts/team-pict/rafif-fp.png"
                 alt=""
               />
             </div>
@@ -265,7 +284,7 @@
             <div class="card-face">
               <img
                 class="card-front"
-                src="../assets/picts/team-pict/amr-fp.png"
+                src="src/assets/picts/team-pict/amr-fp.png"
                 alt=""
               />
             </div>
@@ -283,7 +302,7 @@
             <div class="card-face">
               <img
                 class="card-front"
-                src="../assets/picts/team-pict/fitra-fp.png"
+                src="src/assets/picts/team-pict/fitra-fp.png"
                 alt=""
               />
             </div>
@@ -302,7 +321,8 @@
     </section>
     <!-- ! TEAM -->
 
-    <script src="../js/index.js"></script>
+    <script src="src/js/menu.js"></script>
+    <script src="src/js/filterable.js"></script>
     <script>
       feather.replace();
     </script>
