--- a/index.html
+++ b/index.html
@@ -183,16 +183,16 @@
       </div>
       <div
         id="filterables"
-        class="relative w-full h-full grid gap-3 items-center justify-center overflow-hidden md:grid-cols-1 lg:grid-cols-2"
+        class="w-full h-full grid gap-3 items-center justify-center overflow-hidden sm:grid-cols-1 lg:grid-cols-2"
       >
         <div
           data-set="peta-harga"
-          class="relative overflow-hidden w-full pt-[56.25%] mx-auto"
+          class="relative overflow-hidden w-full min-h-[306px] pt-[56.25%] mx-auto"
         >
           <iframe
             title="pemetaan-harga"
             src="https://app.powerbi.com/reportEmbed?reportId=494056fc-d985-4e92-bc1f-6268f8c9a71c&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
-            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+            class="absolute top-0 left-0 w-full h-full"
           ></iframe>
         </div>
         <div
@@ -202,7 +202,7 @@
           <iframe
             title="penjualan"
             src="https://app.powerbi.com/reportEmbed?reportId=9935679c-f752-418e-8e97-8c17bbfc351d&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
-            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+            class="absolute top-0 left-0 w-full h-full"
           ></iframe>
         </div>
         <div
@@ -212,7 +212,7 @@
           <iframe
             title="stok"
             src="https://app.powerbi.com/reportEmbed?reportId=23a96032-4178-427c-9abf-28f80559ccd2&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
-            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+            class="absolute top-0 left-0 w-full h-full"
           ></iframe>
         </div>
         <div
@@ -222,7 +222,7 @@
           <iframe
             title="rating"
             src="https://app.powerbi.com/reportEmbed?reportId=c368a569-e098-4a0c-b0eb-d5cf167dc02c&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
-            class="absolute top-0 bottom-0 left-0 right-0 w-full h-full"
+            class="absolute top-0 left-0 w-full h-full"
           ></iframe>
         </div>
       </div>
