--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="header max-md:scale-75">VISUALISASI DATA</div>
       <div
         id="filter-buttons"
-        class="flex justify-center items-center flex-wrap mb-3 xl:gap-5"
+        class="w-full flex justify-center items-center mb-3 xl:gap-5"
       >
         <button data-set="all" class="active">Show All</button>
         <button data-set="peta-harga">Peta Harga</button>
@@ -187,7 +187,7 @@
       >
         <div
           data-set="peta-harga"
-          class="relative overflow-hidden w-full min-h-[306px] pt-[56.25%] mx-auto"
+          class="relative overflow-hidden w-full pt-[56.25%] mx-auto"
         >
           <iframe
             title="pemetaan-harga"
@@ -201,7 +201,7 @@
         >
           <iframe
             title="penjualan"
-            src="https://app.powerbi.com/reportEmbed?reportId=9935679c-f752-418e-8e97-8c17bbfc351d&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
+            src="https://app.powerbi.com/reportEmbed?reportId=23a96032-4178-427c-9abf-28f80559ccd2&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
             class="absolute top-0 left-0 w-full h-full"
           ></iframe>
         </div>
@@ -211,7 +211,7 @@
         >
           <iframe
             title="stok"
-            src="https://app.powerbi.com/reportEmbed?reportId=23a96032-4178-427c-9abf-28f80559ccd2&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
+            src="https://app.powerbi.com/reportEmbed?reportId=9935679c-f752-418e-8e97-8c17bbfc351d&autoAuth=true&ctid=98374cd7-c8b8-413c-8476-b8722ae7e8e8"
             class="absolute top-0 left-0 w-full h-full"
           ></iframe>
         </div>
@@ -320,6 +320,87 @@
       <hr class="bottom-dashed" />
     </section>
     <!-- ! TEAM -->
+
+    <!-- ! FOOTER -->
+    <section
+      id="footer"
+      class="w-full flex flex-wrap justify-between p-5 bg-[#383a3c]"
+    >
+      <hr class="top-dashed" />
+      <div class="flex flex-col gap-2 text-[#F6EDD8] text-lg mb-20 p-3">
+        <div class="flex flex-row items-center flex-nowrap">
+          <img class="h-16" src="src/assets/picts/logo-1.png" alt="" />
+          <h1 class="text-5xl font-BazarMedium text-[#F6EDD8]">LPHA1</h1>
+        </div>
+        <h2>Kelompok A1 - 1A D4 Informatika</h2>
+        <h3>Politeknik Negeri Bandung</h3>
+        <h4>Mata Kuliah Proyek I</h4>
+      </div>
+
+      <div class="flex flex-wrap justify-center items-center gap-3">
+        <div
+          class="max-lg:w-full flex justify-around gap-3 mb-20 text-[#F6EDD8]"
+        >
+          <div class="text-xl p-3">
+            <h1 class="text-3xl mb-3">Useful Links</h1>
+            <ul class="flex flex-col gap-5">
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                <a href="#home">Home</a>
+              </li>
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                <a href="#principle">About Us</a>
+              </li>
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                <a href="#visualization">Visualization</a>
+              </li>
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                <a href="#Team">Team</a>
+              </li>
+            </ul>
+          </div>
+          <div class="text-xl p-3">
+            <h1 class="text-3xl mb-3">Our Member</h1>
+            <ul class="flex flex-col gap-5">
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                Reqi Jumantara Hapid
+              </li>
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                Amr Fadhillah Abiiyu Alif Basysyar
+              </li>
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                Muhammad Rafif Genadratama
+              </li>
+              <li class="flex">
+                <span class="material-symbols-outlined">chevron_right</span>
+                Fitra Rifki Firdaus
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="text-xl p-3 max-md:w-full text-[#F6EDD8]">
+          <h1 class="text-3xl mb-3 text-center xl:text-left">Contact Us</h1>
+          <p class="leading-10 text-center xl:text-left">
+            Jl. Gegerkalong Hilir, Ciwaruga <br />
+            Kec. Parongpong, Kabupaten Bandung Barat <br />
+            Jawa Barat 40559 <br /><br />
+            <strong>Phone: </strong>022-2013789 <br />
+            <strong>Email: </strong>polban@polban.ac.id
+          </p>
+        </div>
+      </div>
+      <div class="w-full text-[#F6EDD8] text-center">
+        © Copyright <strong>2024</strong>. ALPHA1
+      </div>
+      <hr class="bottom-dashed" />
+    </section>
+    <!-- ! FOOTER -->
 
     <script src="src/js/menu.js"></script>
     <script src="src/js/filterable.js"></script>
