--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <!-- ! FOOTER -->
     <section
       id="footer"
-      class="w-full flex flex-wrap justify-between p-5 bg-[#383a3c]"
+      class="relative w-full flex flex-wrap justify-between p-5 bg-[#383a3c]"
     >
       <hr class="top-dashed" />
       <div class="flex flex-col gap-2 text-[#F6EDD8] text-lg mb-20 p-3">
