--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       class="flex justify-center items-center bg-[#78bbbb] mt-[68px] relative h-[100vh]"
     >
       <hr class="top-dashed" />
-      <div class="max-w-[940px] mx-auto">
+      <div class="w-1/2 mx-auto">
         <figure class="p-3 rounded-[4px] bg-slate-200">
           <img class="mb-4" src="src/assets/picts/a1_team.jpg" alt="" />
           <figcaption class="text-4xl font-BazarMedium text-center">
