--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <nav
       class="fixed top-0 w-full flex justify-between items-center py-3 px-5 bg-[#78bbbb] shadow-lg z-50"
     >
-      <div class="duration-300 ease-in-out z-50 navigation-lg navigation-md">
+      <div
+        class="flex justify-center items-center gap-3 duration-300 ease-in-out z-50 navigation-lg navigation-md"
+      >
         <a class="navigation-link" href="#hero">HOME</a>
         <a class="navigation-link" href="#principle">PRINCIPLE</a>
         <a class="navigation-link" href="#visualization">VISUALIZATION</a>
@@ -45,7 +47,7 @@
     <!-- ! HERO -->
     <section
       id="hero"
-      class="flex justify-center items-center bg-[#78bbbb] mt-[90px] relative h-[100vh]"
+      class="flex justify-center items-center bg-[#78bbbb] mt-[68px] relative h-[100vh]"
     >
       <hr class="top-dashed" />
       <div class="w-3/4 lg:w-1/2 mx-auto">
@@ -83,10 +85,12 @@
               >balance</span
             >
           </div>
-          <h4 class="mb-3 font-BazarMedium text-4xl">TRUTHFUL</h4>
-          <h5 class="mb-3 font-RobotoSlab text-2xl">SAYING THE TRUTH</h5>
+          <h4 class="mb-3 font-BazarMedium text-2xl lg:text-4xl">TRUTHFUL</h4>
+          <h5 class="mb-3 font-RobotoSlab text-xl lg:text-2xl">
+            SAYING THE TRUTH
+          </h5>
           <hr />
-          <p class="text-2xl font-medium text-justify">
+          <p class="text-sm lg:text-2xl font-medium text-justify">
             maintaining honesty and integrity in all interactions and
             communications within the team. This principle emphasizes
             transparency, openness, and reliability. Team members should be
@@ -103,12 +107,12 @@
               >timer</span
             >
           </div>
-          <h4 class="mb-3 font-BazarMedium text-4xl">EFFICIENT</h4>
-          <h5 class="mb-3 font-RobotoSlab text-2xl">
+          <h4 class="mb-3 font-BazarMedium text-2xl lg:text-4xl">EFFICIENT</h4>
+          <h5 class="mb-3 font-RobotoSlab text-xl lg:text-2xl">
             ACHIEVE GOALS EFFECTIVELY
           </h5>
           <hr />
-          <p class="text-2xl font-medium text-justify">
+          <p class="text-sm lg:text-2xl font-medium text-justify">
             achieving goals efficiently and with high quality. This principle
             encourages team members to prioritize tasks, optimize processes, and
             utilize resources wisely. The goal is to produce impactful results
@@ -125,12 +129,14 @@
               >diversity_3</span
             >
           </div>
-          <h4 class="mb-3 font-BazarMedium text-4xl">ASSOCIATIVE</h4>
-          <h5 class="mb-3 font-RobotoSlab text-2xl">
+          <h4 class="mb-3 font-BazarMedium text-2xl lg:text-4xl">
+            ASSOCIATIVE
+          </h4>
+          <h5 class="mb-3 font-RobotoSlab text-xl lg:text-2xl">
             SUPPORTIVE AND COLLABORATIVE
           </h5>
           <hr />
-          <p class="text-2xl font-medium text-justify">
+          <p class="text-sm lg:text-2xl font-medium text-justify">
             fostering strong connections and collaboration among team members.
             This principle values the power of teamwork, encouraging open
             communication, mutual support, and the sharing of knowledge and
@@ -147,12 +153,12 @@
               >mindfulness</span
             >
           </div>
-          <h4 class="mb-3 font-BazarMedium text-4xl">MINDFUL</h4>
-          <h5 class="mb-3 font-RobotoSlab text-2xl">
+          <h4 class="mb-3 font-BazarMedium text-2xl lg:text-4xl">MINDFUL</h4>
+          <h5 class="mb-3 font-RobotoSlab text-xl lg:text-2xl">
             AWARE OF EACH TEAM MEMBER
           </h5>
           <hr />
-          <p class="text-2xl font-medium text-justify">
+          <p class="text-sm lg:text-2xl font-medium text-justify">
             Mindfulness involves being fully present, attentive, and considerate
             in all team interactions and tasks. This principle emphasizes
             awareness, empathy, and intentionality. Team members should be
