--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
       id="hero"
       class="flex justify-center items-center bg-[#78bbbb] mt-[68px] relative h-[100vh]"
     >
-      <hr class="top-dashed" />
-      <div class="w-3/4 lg:w-1/2 mx-auto">
+      <div class="w-3/4 lg:w-1/2 mx-auto relative">
         <figure class="p-3 rounded-[4px] bg-slate-200">
           <img class="w-full mb-4" src="src/assets/picts/a1_team.jpg" alt="" />
           <figcaption class="text-2xl lg:text-4xl font-BazarMedium text-center">
@@ -67,6 +66,174 @@
       <hr class="bottom-dashed" />
     </section>
     <!-- ! HERO -->
+
+    <!-- ! TEAM -->
+    <section id="team" class="relative p-6 bg-[#e0bc6e]">
+      <hr class="top-dashed" />
+      <!-- ? HEADER -->
+      <h2 class="header mb-8">TEAM</h2>
+      <!-- ? HEADER -->
+
+      <!-- ? IMG CONTAINER group -->
+      <div class="mb-8 grid grid-cols-2 xl:grid-cols-4">
+        <div class="card-container group">
+          <div class="card group-hover:[transform:rotateY(180deg)">
+            <div class="card-face">
+              <img
+                class="card-front"
+                src="src/assets/picts/team-pict/reqi-fp.png"
+                alt=""
+              />
+            </div>
+            <div
+              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
+            >
+              <div
+                class="h-full w-full p-3 rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px]"
+              >
+                <img
+                  class="mx-auto"
+                  src="src/assets/picts/name-tag/REQI JH..png"
+                  alt=""
+                />
+                <div class="w-full flex justify-center p-5">
+                  <ul class="list-disc text-xl font-extrabold">
+                    Lesson Learned
+                    <li class="text-lg font-medium">
+                      Melatih kemampuan komunikasi dalam proyek tim
+                    </li>
+                    <li class="text-lg font-medium">
+                      Memahaami cara mengalokasikan sumber daya anggota dan
+                      waktu dengan efisien
+                    </li>
+                    <li class="text-lg font-medium">
+                      Memahami bagaimana untuk mengambil keputusan dengan cepat
+                      dan tepat
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-container group">
+          <div class="card group-hover:[transform:rotateY(180deg)]">
+            <div class="card-face">
+              <img
+                class="card-front"
+                src="src/assets/picts/team-pict/rafif-fp.png"
+                alt=""
+              />
+            </div>
+            <div
+              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
+            >
+              <div
+                class="h-full w-full p-3 rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px]"
+              >
+                <img
+                  class="mx-auto"
+                  src="src/assets/picts/name-tag/RAFIF GEN..png"
+                  alt=""
+                />
+                <div class="w-full flex justify-center p-5">
+                  <ul class="list-disc text-xl font-extrabold">
+                    Lesson Learned
+                    <li class="text-lg font-medium">
+                      Penggunaan PowerBI secara advance
+                    </li>
+                    <li class="text-lg font-medium">
+                      Mempelajari pentinganya cross check saat bertanya ke AI
+                    </li>
+                    <li class="text-lg font-medium">
+                      Mempelajari kemudahan bahasa Python
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-container group">
+          <div class="card group-hover:[transform:rotateY(180deg)]">
+            <div class="card-face">
+              <img
+                class="card-front"
+                src="src/assets/picts/team-pict/amr-fp.png"
+                alt=""
+              />
+            </div>
+            <div
+              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
+            >
+              <div
+                class="h-full w-full p-3 rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px]"
+              >
+                <img
+                  class="mx-auto"
+                  src="src/assets/picts/name-tag/AMR FAD..png"
+                  alt=""
+                />
+                <div class="w-full flex justify-center p-5">
+                  <ul class="list-disc text-xl font-extrabold">
+                    Lesson Learned
+                    <li class="text-lg font-medium">
+                      Mempelajari penggunaan Selenium WebDriver
+                    </li>
+                    <li class="text-lg font-medium">
+                      Menangani konten dinamis yang dirender menggunakan
+                      JavaScript
+                    </li>
+                    <li class="text-lg font-medium">Menangani URL forwarder</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card-container group">
+          <div class="card group-hover:[transform:rotateY(180deg)]">
+            <div class="card-face">
+              <img
+                class="card-front"
+                src="src/assets/picts/team-pict/fitra-fp.png"
+                alt=""
+              />
+            </div>
+            <div
+              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
+            >
+              <div
+                class="h-full w-full rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px] p-3"
+              >
+                <img
+                  class="mx-auto"
+                  src="src/assets/picts/name-tag/FITRA RF..jpg"
+                  alt=""
+                />
+                <div class="w-full flex justify-center p-5">
+                  <ul class="list-disc text-xl font-extrabold">
+                    Lesson Learned
+                    <li class="text-lg font-medium">
+                      Mempelajari pengembangan UI Website
+                    </li>
+                    <li class="text-lg font-medium">
+                      Mempelajari penggunaan library TailwindCSS
+                    </li>
+                    <li class="text-lg font-medium">
+                      Mengembangkan kemampuan teamwork
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ? IMG CONTAINER group -->
+      <hr class="bottom-dashed" />
+    </section>
+    <!-- ! TEAM -->
 
     <!-- ! ABOUT US -->
     <section id="principle" class="flex flex-col bg-[#e6e1d0] py-9 relative">
@@ -238,107 +405,20 @@
     </section>
     <!-- ! VISUALIZATION -->
 
-    <!-- ! TEAM -->
-    <section id="team" class="relative p-6 bg-[#e0bc6e]">
-      <hr class="top-dashed" />
-      <!-- ? HEADER -->
-      <h2 class="header mb-8">TEAM</h2>
-      <!-- ? HEADER -->
-
-      <!-- ? IMG CONTAINER group -->
-      <div class="mb-8 grid sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-4">
-        <div class="card-container group">
-          <div class="card group-hover:[transform:rotateY(180deg)]">
-            <div class="card-face">
-              <img
-                class="card-front"
-                src="src/assets/picts/team-pict/reqi-fp.png"
-                alt=""
-              />
-            </div>
-            <div
-              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
-            >
-              <div
-                class="h-full w-full rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px]"
-              >
-                <a href="instagram.com/fitraxr_"
-                  ><i data-feather="instagram"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card-container group">
-          <div class="card group-hover:[transform:rotateY(180deg)]">
-            <div class="card-face">
-              <img
-                class="card-front"
-                src="src/assets/picts/team-pict/rafif-fp.png"
-                alt=""
-              />
-            </div>
-            <div
-              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
-            >
-              <div
-                class="h-full w-full rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px]"
-              ></div>
-            </div>
-          </div>
-        </div>
-        <div class="card-container group">
-          <div class="card group-hover:[transform:rotateY(180deg)]">
-            <div class="card-face">
-              <img
-                class="card-front"
-                src="src/assets/picts/team-pict/amr-fp.png"
-                alt=""
-              />
-            </div>
-            <div
-              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
-            >
-              <div
-                class="h-full w-full rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px]"
-              ></div>
-            </div>
-          </div>
-        </div>
-        <div class="card-container group">
-          <div class="card group-hover:[transform:rotateY(180deg)]">
-            <div class="card-face">
-              <img
-                class="card-front"
-                src="src/assets/picts/team-pict/fitra-fp.png"
-                alt=""
-              />
-            </div>
-            <div
-              class="card-face [backface-visibility:hidden] [transform:rotateY(180deg)]"
-            >
-              <div
-                class="h-full w-full rounded-[16px] bg-[#D9C495] border-[#846C1B] border-[5px]"
-              ></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- ? IMG CONTAINER group -->
-      <hr class="bottom-dashed" />
-    </section>
-    <!-- ! TEAM -->
-
     <!-- ! FOOTER -->
     <section
       id="footer"
       class="relative w-full flex flex-wrap justify-between p-5 bg-[#383a3c]"
     >
       <hr class="top-dashed" />
-      <div class="flex flex-col gap-2 text-[#F6EDD8] text-lg mb-20 p-3">
+      <div
+        class="flex flex-col gap-2 text-[#F6EDD8] text-xl lg:text-2xl mb-20 p-3"
+      >
         <div class="flex flex-row items-center flex-nowrap">
-          <img class="h-16" src="src/assets/picts/logo-1.png" alt="" />
-          <h1 class="text-5xl font-BazarMedium text-[#F6EDD8]">LPHA1</h1>
+          <img class="h-10 lg:h-16" src="src/assets/picts/logo-1.png" alt="" />
+          <h1 class="text-3xl lg:text-5xl font-BazarMedium text-[#F6EDD8]">
+            LPHA1
+          </h1>
         </div>
         <h2>Kelompok A1 - 1A D4 Informatika</h2>
         <h3>Politeknik Negeri Bandung</h3>
@@ -350,7 +430,7 @@
           class="max-lg:w-full flex justify-around gap-3 mb-20 text-[#F6EDD8]"
         >
           <div class="text-xl p-3">
-            <h1 class="text-3xl mb-3">Useful Links</h1>
+            <h1 class="text-2xl lg:text-3xl mb-3">Useful Links</h1>
             <ul class="flex flex-col gap-5">
               <li class="flex">
                 <span class="material-symbols-outlined">chevron_right</span>
@@ -371,7 +451,7 @@
             </ul>
           </div>
           <div class="text-xl p-3">
-            <h1 class="text-3xl mb-3">Our Member</h1>
+            <h1 class="text-2xl lg:text-3xl mb-3">Our Member</h1>
             <ul class="flex flex-col gap-5">
               <li class="flex">
                 <span class="material-symbols-outlined">chevron_right</span>
@@ -393,7 +473,9 @@
           </div>
         </div>
         <div class="text-xl p-3 max-md:w-full text-[#F6EDD8]">
-          <h1 class="text-3xl mb-3 text-center xl:text-left">Contact Us</h1>
+          <h1 class="text-2xl lg:text-3xl mb-3 text-center xl:text-left">
+            Contact Us
+          </h1>
           <p class="leading-10 text-center xl:text-left">
             Jl. Gegerkalong Hilir, Ciwaruga <br />
             Kec. Parongpong, Kabupaten Bandung Barat <br />
