--- a/index.html
+++ b/index.html
@@ -49,19 +49,18 @@
       id="hero"
       class="flex justify-center items-center bg-[#78bbbb] mt-[68px] relative h-[100vh]"
     >
-      <div class="w-3/4 lg:w-1/2 mx-auto relative">
-        <figure class="p-3 rounded-[4px] bg-slate-200">
-          <img class="w-full mb-4" src="src/assets/picts/a1_team.jpg" alt="" />
-          <figcaption class="text-2xl lg:text-4xl font-BazarMedium text-center">
-            ALPHA ONE
-          </figcaption>
-        </figure>
-        <div class="my-5 font-BazarMedium text-center text-[#F6EDD8]">
-          <h2 class="text-xl lg:text-4xl mb-2">"HELLO, WE ARE TEAM A1.</h2>
-          <h3 class="text-xl lg:text-3xl">
-            WELCOME TO OUR DATA SCRAPING PROJECT"
-          </h3>
+      <div>
+        <div class="w-2/3 lg:w-1/3 mx-auto p-3 bg-slate-200 rounded-md font-BazarMedium text-center text-2xl">
+          <img src="src/assets/picts/a1_team.jpg" alt="" />
+          ALPHA1
         </div>
+        <div class="mx-auto">
+          <div class="my-5 font-BazarMedium text-center text-[#F6EDD8]">
+            <h2 class="text-xl lg:text-4xl mb-2">"HELLO, WE ARE TEAM A1.</h2>
+            <h3 class="text-xl lg:text-3xl">
+              WELCOME TO OUR DATA SCRAPING PROJECT"
+            </h3>
+          </div>
       </div>
       <hr class="bottom-dashed" />
     </section>
@@ -75,7 +74,7 @@
       <!-- ? HEADER -->
 
       <!-- ? IMG CONTAINER group -->
-      <div class="mb-8 grid grid-cols-2 xl:grid-cols-4">
+      <div class="h-3/4 mb-8 grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4">
         <div class="card-container group">
           <div class="card group-hover:[transform:rotateY(180deg)">
             <div class="card-face">
@@ -412,71 +411,71 @@
     >
       <hr class="top-dashed" />
       <div
-        class="flex flex-col gap-2 text-[#F6EDD8] text-xl lg:text-2xl mb-20 p-3"
+        class="flex flex-col gap-2 text-[#F6EDD8] text-sm font-medium mb-20 p-3"
       >
         <div class="flex flex-row items-center flex-nowrap">
           <img class="h-10 lg:h-16" src="src/assets/picts/logo-1.png" alt="" />
-          <h1 class="text-3xl lg:text-5xl font-BazarMedium text-[#F6EDD8]">
-            LPHA1
-          </h1>
+          <h1 class="text-3xl font-BazarMedium text-[#F6EDD8]">LPHA1</h1>
         </div>
         <h2>Kelompok A1 - 1A D4 Informatika</h2>
         <h3>Politeknik Negeri Bandung</h3>
         <h4>Mata Kuliah Proyek I</h4>
       </div>
 
-      <div class="flex flex-wrap justify-center items-center gap-3">
+      <div class="flex flex-wrap justify-center items-start gap-3">
         <div
           class="max-lg:w-full flex justify-around gap-3 mb-20 text-[#F6EDD8]"
         >
-          <div class="text-xl p-3">
-            <h1 class="text-2xl lg:text-3xl mb-3">Useful Links</h1>
-            <ul class="flex flex-col gap-5">
-              <li class="flex">
+          <div class="text-sm font-medium p-3">
+            <h1 class="text-2xl mb-3 font-bold">Useful Links</h1>
+            <ul class="flex flex-col gap-y-3">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 <a href="#home">Home</a>
               </li>
-              <li class="flex">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 <a href="#principle">About Us</a>
               </li>
-              <li class="flex">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 <a href="#visualization">Visualization</a>
               </li>
-              <li class="flex">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 <a href="#Team">Team</a>
               </li>
             </ul>
           </div>
-          <div class="text-xl p-3">
-            <h1 class="text-2xl lg:text-3xl mb-3">Our Member</h1>
-            <ul class="flex flex-col gap-5">
-              <li class="flex">
+          <div class="text-sm p-3 font-medium">
+            <h1 class="text-2xl mb-3 font-bold">Our Member</h1>
+            <ul class="flex flex-col gap-3">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 Reqi Jumantara Hapid
               </li>
-              <li class="flex">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 Amr Fadhillah Abiiyu Alif Basysyar
               </li>
-              <li class="flex">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 Muhammad Rafif Genadratama
               </li>
-              <li class="flex">
+              <li class="flex items-center">
                 <span class="material-symbols-outlined">chevron_right</span>
                 Fitra Rifki Firdaus
               </li>
             </ul>
           </div>
         </div>
-        <div class="text-xl p-3 max-md:w-full text-[#F6EDD8]">
-          <h1 class="text-2xl lg:text-3xl mb-3 text-center xl:text-left">
+        <div
+          class="flex flex-col justify-start text-sm font-medium p-3 max-md:w-full text-[#F6EDD8]"
+        >
+          <h1 class="text-xl font-bold mb-3 text-center xl:text-left">
             Contact Us
           </h1>
-          <p class="leading-10 text-center xl:text-left">
+          <p class="leading-5 text-center xl:text-left">
             Jl. Gegerkalong Hilir, Ciwaruga <br />
             Kec. Parongpong, Kabupaten Bandung Barat <br />
             Jawa Barat 40559 <br /><br />
