--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
               </div>
             </div>
           </div>
+          <div class="flex justify-around items-center p-2 rounded-lg gap-3 mx-auto absolute left-1/4 right-1/4 bg-[#D9C495] border border-[#846C1B] bottom-0 opacity-0 transition-all duration-300 group-hover:opacity-70 group-hover:-bottom-12">
+            <a href="https://www.instagram.com/jumantara_reqi/"><i data-feather="instagram" width="32" height="32"></i></a>
+            <a href="https://github.com/JumantaraReqi20"><i data-feather="github" width="32" height="32"></i></a>
+          </div>
         </div>
         <div class="card-container group">
           <div class="card group-hover:[transform:rotateY(180deg)]">
@@ -152,6 +156,10 @@
               </div>
             </div>
           </div>
+          <div class="flex justify-around items-center p-2 rounded-lg gap-3 mx-auto absolute left-1/4 right-1/4 bg-[#D9C495] border border-[#846C1B] bottom-0 opacity-0 transition-all duration-300 group-hover:opacity-70 group-hover:-bottom-12">
+            <a href="https://www.instagram.com/rafif.genadratama/"><i data-feather="instagram" width="32" height="32"></i></a>
+            <a href="https://github.com/kupip"><i data-feather="github" width="32" height="32"></i></a>
+          </div>
         </div>
         <div class="card-container group">
           <div class="card group-hover:[transform:rotateY(180deg)]">
@@ -188,6 +196,10 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="flex justify-around items-center p-2 rounded-lg gap-3 mx-auto absolute left-1/4 right-1/4 bg-[#D9C495] border border-[#846C1B] bottom-0 opacity-0 transition-all duration-300 group-hover:opacity-70 group-hover:-bottom-12">
+            <a href="https://www.instagram.com/amr.fadhilah/"><i data-feather="instagram" width="32" height="32"></i></a>
+            <a href="https://github.com/amrfad"><i data-feather="github" width="32" height="32"></i></a>
           </div>
         </div>
         <div class="card-container group">
@@ -226,6 +238,10 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="flex justify-around items-center p-2 rounded-lg gap-3 mx-auto absolute left-1/4 right-1/4 bg-[#D9C495] border border-[#846C1B] bottom-0 opacity-0 transition-all duration-300 group-hover:opacity-70 group-hover:-bottom-12">
+            <a href="https://www.instagram.com/fitraxr_/"><i data-feather="instagram" width="32" height="32"></i></a>
+            <a href="https://github.com/1A-Fitra"><i data-feather="github" width="32" height="32"></i></a>
           </div>
         </div>
       </div>
@@ -494,6 +510,7 @@
     <script src="src/js/menu.js"></script>
     <script src="src/js/filterable.js"></script>
     <script>
+      // feather.icons.instagram.toSVG({'width': 32})
       feather.replace();
     </script>
   </body>
